--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:requestLegacyExternalStorage = "true"
         android:theme="@style/Theme.SEAI">
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -33,6 +34,8 @@
         </activity>
 
         <activity android:name=".SettingActivity"/>
+
+        <activity android:name=".FeedbackActivity"/>
 
         <provider
         android:name="cn.bmob.v3.util.BmobContentProvider"
