新增登录，注册，修改密码，反馈功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
 
         <activity android:name=".FeedbackActivity"/>
 
+        <activity android:name=".LoginActivity"/>
+
+        <activity android:name=".ForgetActivity"/>
+
         <provider
         android:name="cn.bmob.v3.util.BmobContentProvider"
         android:authorities="com.rayjin.seai.BmobContentProvider">
