新增更新界面，camera2

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,13 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        release {
+            storeFile file('D:\\Ray\\ray_android.jks')
+            storePassword '2002qd0129'
+            keyAlias 'ray'
+        }
+    }
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
