--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
         </activity>
         <activity android:name=".SettingActivity"/>
 
-        <activity android:name=".CameraActivity2"/>
+        <activity android:name=".CameraActivity"/>
 
         <activity android:name=".ResultActivity"/>
 
