--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rayjin.seai">
     
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"/>
-    <!--获取GSM（2g）、WCDMA（联通3g）等网络状态的信息  -->
+    <!--获取GSM（2g）（联通3g）等网络状态的信息  -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!--获取wifi网络状态的信息 -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -29,23 +30,25 @@
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.SEAI"
         android:screenOrientation="portrait">
+
         <activity android:name=".MainActivity">
-            android:configChanges="keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name="cn.bmob.v3.update.UpdateDialogActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" >
         </activity>
+
         <activity android:name=".SettingActivity"/>
 
         <activity android:name=".CameraActivity"/>
 
-        <activity android:name=".CameraActivity2"
+        <activity
+            android:name=".CameraActivity2"
             android:hardwareAccelerated="true"/>
 
         <activity android:name=".ResultActivity"/>
@@ -59,8 +62,8 @@
         <activity android:name=".testDemo"/>
 
         <provider
-        android:name="cn.bmob.v3.util.BmobContentProvider"
-        android:authorities="com.rayjin.seai.BmobContentProvider">
+            android:name="cn.bmob.v3.util.BmobContentProvider"
+            android:authorities="com.rayjin.seai.BmobContentProvider">
         </provider>
 
         <provider
@@ -72,7 +75,6 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
-
 
     </application>
 
