--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
     <uses-feature android:name="android.hardware.camera.autofocus"/>
 
     <application
+        android:name=".RApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -31,7 +32,9 @@
         android:theme="@style/Theme.SEAI"
         android:screenOrientation="portrait">
 
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".SplashActivity"
+            android:theme="@style/LauncherTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -43,23 +46,46 @@
             android:theme="@android:style/Theme.Translucent.NoTitleBar" >
         </activity>
 
-        <activity android:name=".SettingActivity"/>
+        <activity
+            android:name=".StartActivity"
+            android:launchMode="singleTop"/>
 
-        <activity android:name=".CameraActivity"/>
+        <activity
+            android:name=".SettingActivity"
+            android:launchMode="singleTop"/>
+
+        <activity
+            android:name=".CameraActivity"
+            android:launchMode="singleTop"/>
 
         <activity
             android:name=".CameraActivity2"
-            android:hardwareAccelerated="true"/>
+            android:hardwareAccelerated="true"
+            android:launchMode="singleTop"/>
 
-        <activity android:name=".ResultActivity"/>
+        <activity
+            android:name=".ResultActivity"
+            android:launchMode="singleTop"/>
 
-        <activity android:name=".FeedbackActivity"/>
+        <activity
+            android:name=".FeedbackActivity"
+            android:launchMode="singleTop"/>
 
-        <activity android:name=".LoginActivity"/>
+        <activity
+            android:name=".MainActivity"
+            android:launchMode="singleTop"/>
 
-        <activity android:name=".ForgetActivity"/>
+        <activity
+            android:name=".LoginActivity"
+            android:launchMode="singleTop"/>
 
-        <activity android:name=".testDemo"/>
+        <activity
+            android:name=".ForgetActivity"
+            android:launchMode="singleTop"/>
+
+        <activity
+            android:name=".testDemo"
+            android:launchMode="singleTop"/>
 
         <provider
             android:name="cn.bmob.v3.util.BmobContentProvider"
