优化项目结构 新增app图标 完成obverse 模式 demo 加入基于pytorch的识别demo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,10 @@
             android:launchMode="singleTop"/>
 
         <activity
+            android:name=".ObserveActivity"
+            android:launchMode="singleTop"/>
+
+        <activity
             android:name=".FeedbackActivity"
             android:launchMode="singleTop"/>
 
@@ -83,9 +87,9 @@
             android:name=".ForgetActivity"
             android:launchMode="singleTop"/>
 
-        <activity
-            android:name=".testDemo"
-            android:launchMode="singleTop"/>
+<!--        <activity-->
+<!--            android:name=".testDemo"-->
+<!--            android:launchMode="singleTop"/>-->
 
         <provider
             android:name="cn.bmob.v3.util.BmobContentProvider"
