优化识别帧率 修复反馈界面无法多行输入的bug 汉化识别结果的label

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,7 @@
 
         <activity
             android:name=".ObserveActivity"
+            android:hardwareAccelerated="true"
             android:launchMode="singleTop"/>
 
         <activity
